implemen GetNoteList handler
